-Fixed integer divsion truncation error interefering with payout calculations -Added printable owner payout view -Added custom table css

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,23 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+table.print {
+    width: auto;
+    text-align: center;
+    color: black;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+tr, caption, td, th.print {
+    text-align: center;
+    color: black;
+    border: 1px solid black;
+}
+caption.print {
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    border: 1px solid black;
+    caption-side: top;
+}
